crates/cribo/tests/snapshots/execution_results@machinery_parent_eviction.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_parent_eviction/main.py
---
ExecutionResults {
    status: Success,
    stdout: "sub: sub value\nreload keeps dict: left-over True pkg init\nfresh: False False pkg init",
    stderr: "",
}
