crates/cribo/tests/snapshots/execution_results@machinery_preloaded_static_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_preloaded_static_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "replacement True",
    stderr: "",
}
