crates/cribo/tests/snapshots/execution_results@machinery_preserved_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_preserved_relative_import/main.py
---
ExecutionResults {
    status: Success,
    stdout: "relative backend",
    stderr: "",
}
