crates/cribo/tests/snapshots/execution_results@machinery_pristine_inlined_bounded.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_pristine_inlined_bounded/main.py
---
ExecutionResults {
    status: Success,
    stdout: "bounded: True True",
    stderr: "",
}
