crates/cribo/tests/snapshots/execution_results@machinery_rebound_cribo_pickle.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_rebound_cribo_pickle/main.py
---
ExecutionResults {
    status: Success,
    stdout: "True round-trip user data",
    stderr: "",
}
