crates/cribo/tests/snapshots/execution_results@machinery_rebound_cribo_wrapper.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_rebound_cribo_wrapper/main.py
---
ExecutionResults {
    status: Success,
    stdout: "{\"kind\": \"wrapper\"} None",
    stderr: "",
}
