crates/cribo/tests/snapshots/execution_results@machinery_reload_retains_state.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_reload_retains_state/main.py
---
ExecutionResults {
    status: Success,
    stdout: "counter loaded\nfirst: 1\ncounter loaded\nreloaded: 2 True kept",
    stderr: "",
}
