crates/cribo/tests/snapshots/execution_results@machinery_shadowed_builtins.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_shadowed_builtins/main.py
---
ExecutionResults {
    status: Success,
    stdout: "bundled helper shadowed also shadowed",
    stderr: "",
}
