crates/cribo/tests/snapshots/execution_results@machinery_static_then_evicted.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/machinery_static_then_evicted/main.py
---
ExecutionResults {
    status: Success,
    stdout: "counter loaded\nfirst: 1\ncounter loaded\nfresh: 1 False",
    stderr: "",
}
