crates/cribo/tests/snapshots/execution_results@match_pattern_rewrites.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/match_pattern_rewrites/main.py
---
ExecutionResults {
    status: Success,
    stdout: "first-class\nfirst-mapping\nfirst-sequence:first-pending\nfirst-recorded\nsecond-class\nsecond-mapping\nsecond-sequence:second-pending\nsecond-recorded\nwrapped-class\nwrapped-global\nwrapped-module\ncaptured-value\nmodule-value",
    stderr: "",
}
